--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://DmitryWellDew.github.io/React_wayOf-SAMURAI",
+  "homepage": "http://DmitryWellDew.github.io/React_MySocialNet",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
